--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon app.js",
     "start-server": "node app.js"
   },
-  "author": "Maximilian Schwarzmüller",
+  "author": "Raksgit Agarwal",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.18.3"
@@ -21,6 +21,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mongodb": "^4.13.0",
+    "mongoose": "^6.8.2",
     "mysql2": "^1.6.1",
     "pug": "^2.0.3",
     "sequelize": "^6.6.2"
